# imlint-release

./: 0001-debian-add-symlink-to-cpplint-in-usr-bin-imlint.patch  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  setup.py  tracks.yaml
cmake/: imlint-extras.cmake.em
debian/: changelog  control  gbp.conf  links  rules
scripts/: cpplint  pep8  test_wrapper
src/imlint/: cpplint_wrapper.py
tests/: CMakeLists.txt  runlint.py
